--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -1,6 +1,7 @@
 .ownedContainer, .unownedContainer {
     display: flex;
     align-items: flex-end;
+    margin: .5em 0;
 }
 
 .ownedContainer {
